--- a/src/main/resources/META-INF/scm/plugin.xml
+++ b/src/main/resources/META-INF/scm/plugin.xml
@@ -26,10 +26,10 @@
   </packages>
 
   <!-- 
-    register the javascript file src/main/resources/sonia/scm/sonia.jenkins.js
+    register the javascript file src/main/resources/sonia/scm/sonia.jenkins.globalconfigpanel.js
    -->
   <resources>
-    <script>/sonia/scm/sonia.jenkins.js</script>
+    <script>/sonia/scm/sonia.jenkins.globalconfigpanel.js</script>
   </resources>
 
 </plugin>
