--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   -->
   <groupId>sonia.scm.plugins</groupId>
   <artifactId>scm-jenkins-plugin</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>scm-jenkins-plugin</name>
   <url>https://bitbucket.org/sdorra/scm-jenkins-plugin</url>
