improve jenkins url validation, to allow localhost as hostname

--- a/src/main/resources/META-INF/scm/plugin.xml
+++ b/src/main/resources/META-INF/scm/plugin.xml
@@ -29,6 +29,7 @@
     register the javascript file src/main/resources/sonia/scm/sonia.jenkins.globalconfigpanel.js
    -->
   <resources>
+    <script>/sonia/scm/sonia.jenkins.js</script>
     <script>/sonia/scm/sonia.jenkins.globalconfigpanel.js</script>
   </resources>
 
