--- a/src/main/resources/META-INF/scm/plugin.xml
+++ b/src/main/resources/META-INF/scm/plugin.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plugin SYSTEM "https://download.scm-manager.org/dtd/plugin/2.0.0-01.dtd">
 <plugin>
 
-  <!-- 
+  <scm-version>2</scm-version>
+
+  <!--
     The author of the maven plugin.
     The elements groupId, artifactId, name, version and url
     are automatically added from the pom.xml by a maven plugin (since 1.5).
@@ -17,20 +20,4 @@
   <conditions>
     <min-version>${project.parent.version}</min-version>
   </conditions>
-  
-  <!-- 
-    register the java package sonia.scm.jenkins for plugin extension finder.
-   -->
-  <packages>
-    <package>sonia.scm.jenkins</package>
-  </packages>
-
-  <!-- 
-    register the javascript file src/main/resources/sonia/scm/sonia.jenkins.globalconfigpanel.js
-   -->
-  <resources>
-    <script>/sonia/scm/sonia.jenkins.js</script>
-    <script>/sonia/scm/sonia.jenkins.globalconfigpanel.js</script>
-  </resources>
-
 </plugin>
