--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "flow": "flow check"
   },
   "dependencies": {
-    "@scm-manager/ui-components": "^2.0.0-20181111-155341",
+    "@scm-manager/ui-components": "latest",
     "@scm-manager/ui-extensions": "^0.1.1",
-    "@scm-manager/ui-types": "^2.0.0-20181111-155341",
+    "@scm-manager/ui-types": "latest",
     "react-i18next": "latest",
     "react": "latest"
   },
