--- a/src/main/resources/META-INF/scm/plugin.xml
+++ b/src/main/resources/META-INF/scm/plugin.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE plugin SYSTEM "https://download.scm-manager.org/dtd/plugin/2.0.0-01.dtd">
 <plugin>
 
@@ -12,7 +12,7 @@
   <information>
     <displayName>Jenkins</displayName>
     <author>Cloudogu GmbH</author>
-    <category>Continuous Integration</category>
+    <category>Continuous integration</category>
   </information>
 
   <!-- 
