set standalone=no

--- a/src/main/resources/META-INF/scm/plugin.xml
+++ b/src/main/resources/META-INF/scm/plugin.xml
@@ -12,7 +12,7 @@
   <information>
     <displayName>Jenkins</displayName>
     <author>Cloudogu GmbH</author>
-    <category>Continuous integration</category>
+    <category>Continuous Integration</category>
   </information>
 
   <!-- 
