migrate to new plugin-bundler

--- a/src/main/resources/META-INF/scm/plugin.xml
+++ b/src/main/resources/META-INF/scm/plugin.xml
@@ -21,4 +21,8 @@
   <conditions>
     <min-version>${project.parent.version}</min-version>
   </conditions>
+
+  <resources>
+    <script>assets/scm-jenkins-plugin.bundle.js</script>
+  </resources>
 </plugin>
