--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>sonia.scm.plugins</groupId>
     <artifactId>scm-plugins</artifactId>
-    <version>2.0.0-rc1</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <!--
@@ -41,7 +41,7 @@
     <developerConnection>scm:git:https://github.com/scm-manager/scm-jenkins-plugin</developerConnection>
     <url>https://github.com/scm-manager/scm-jenkins-plugin</url>
   </scm>
-  
+
   <!--
     SCM-Manager maven repository. This part is required to fetch the maven 
     plugins and must be available in each pom of a SCM-Manager plugin.
@@ -79,6 +79,15 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>io.openapitools.swagger</groupId>
+        <artifactId>swagger-maven-plugin</artifactId>
+        <configuration>
+          <resourcePackages>
+            <resourcePackage>sonia.scm.jenkins</resourcePackage>
+          </resourcePackages>
+        </configuration>
       </plugin>
     </plugins>
   </build>
