--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>sonia.scm.plugins</groupId>
     <artifactId>scm-plugins</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-rc5</version>
   </parent>
 
   <!--
@@ -26,7 +26,7 @@
     and http://maven.apache.org/pom.html.
   -->
   <artifactId>scm-jenkins-plugin</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-rc2</version>
   <packaging>smp</packaging>
   <name>scm-jenkins-plugin</name>
   <url>https://github.com/scm-manager/scm-jenkins-plugin</url>
