--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,15 @@
     <url>https://github.com/scm-manager/scm-jenkins-plugin</url>
   </scm>
 
+  <dependencies>
+    <dependency>
+      <groupId>sonia.scm.plugins</groupId>
+      <artifactId>scm-review-plugin</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <optional>true</optional>
+    </dependency>
+  </dependencies>
+
   <!--
     SCM-Manager maven repository. This part is required to fetch the maven 
     plugins and must be available in each pom of a SCM-Manager plugin.
