--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-review-plugin</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0</version>
       <optional>true</optional>
     </dependency>
   </dependencies>
