--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
     and http://maven.apache.org/pom.html.
   -->
   <artifactId>scm-jenkins-plugin</artifactId>
-  <version>2.1.0</version>
+  <version>2.2.0-SNAPSHOT</version>
   <packaging>smp</packaging>
   <name>scm-jenkins-plugin</name>
   <url>https://github.com/scm-manager/scm-jenkins-plugin</url>
