--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
       <version>2.0.0</version>
       <optional>true</optional>
     </dependency>
+
+    <dependency>
+      <groupId>sonia.scm.plugins</groupId>
+      <artifactId>scm-ssh-plugin</artifactId>
+      <version>2.0.0</version>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <!--
