--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
   <parent>
     <groupId>sonia.scm.plugins</groupId>
     <artifactId>scm-plugins</artifactId>
-    <version>2.10.0-SNAPSHOT</version>
+    <version>2.10.0</version>
   </parent>
 
   <!--
