--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ dependencies {
   plugin "sonia.scm.plugins:scm-el-plugin:1.0.0"
   optionalPlugin "sonia.scm.plugins:scm-review-plugin:2.0.0"
   optionalPlugin "sonia.scm.plugins:scm-ssh-plugin:2.0.0"
-  optionalPlugin "sonia.scm.plugins:scm-mail-plugin:2.0.0-20200604.175539-4"
+  optionalPlugin "sonia.scm.plugins:scm-mail-plugin:2.1.0"
 }
 
 scmPlugin {
