--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@scm-manager/scm-jenkins-plugin",
     "private": true,
-    "version": "2.2.4-SNAPSHOT",
+    "version": "2.2.4",
     "license": "MIT",
     "main": "./src/main/js/index.ts",
     "scripts": {
