Pin version of react-hook-form
This avoids the resolution of this to 7.49.3,
which depends on node 18.

--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
         "@types/styled-components": "^5.1.0",
         "jest": "^24.9.0",
         "@scm-manager/plugin-scripts": "1.0.1"
+    },
+    "resolutions": {
+        "react-hook-form": "7.5.1"
     }
 }
