--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@scm-manager/scm-jenkins-plugin",
     "private": true,
-    "version": "2.3.1-SNAPSHOT",
+    "version": "2.4.0",
     "license": "MIT",
     "main": "./src/main/js/index.ts",
     "scripts": {
@@ -10,7 +10,7 @@
         "postinstall": "plugin-scripts postinstall"
     },
     "dependencies": {
-        "@scm-manager/ui-plugins": "2.10.0",
+        "@scm-manager/ui-plugins": "2.48.0",
         "@scm-manager/ui-components": "^2.10.0",
         "@scm-manager/ui-extensions": "^2.10.0",
         "classnames": "^2.2.6",
