--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@scm-manager/ui-plugins": "3.0.0",
         "@scm-manager/ui-components": "3.0.0",
+        "@scm-manager/ui-core": "3.0.0",
         "@scm-manager/ui-extensions": "3.0.0",
         "classnames": "^2.2.6",
         "query-string": "6.14.1",
